--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.31'
+    id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
 group 'de.randombyte'
@@ -16,12 +17,28 @@ repositories {
     }
 }
 
-dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    compile 'com.illposed.osc:javaosc-core:0.6'
-    compile 'org.redundent:kotlin-xml-builder:1.5.1'
-    compile 'io.github.config4k:config4k:0.4.1'
+configurations {
+    compile.extendsFrom shadow
+    compile.extendsFrom kapt
 }
+
+dependencies {
+    shadow 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    shadow 'com.illposed.osc:javaosc-core:0.6'
+    shadow 'org.redundent:kotlin-xml-builder:1.5.1'
+    shadow 'io.github.config4k:config4k:0.4.1'
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'de.randombyte.lighthub.LightHubKt'
+    }
+    
+    configurations = [project.configurations.shadow]
+
+    classifier = null // Remove '-all' suffix from output file name
+}
+build.dependsOn shadowJar
 
 compileKotlin.kotlinOptions {
     jvmTarget = '1.8'
