Fixed config reloading, fixed snapshots

--- a/src/main/resources/config/hex-par/colors.conf
+++ b/src/main/resources/config/hex-par/colors.conf
@@ -1,6 +1,6 @@
 colors {
     colors {
-        Blue {
+        blue {
             amber=0
             blue=255
             green=0
@@ -8,7 +8,7 @@ colors {
             uv=0
             white=0
         }
-        Green {
+        green {
             amber=0
             blue=0
             green=255
@@ -16,13 +16,21 @@ colors {
             uv=0
             white=0
         }
-        Red {
+        red {
             amber=0
             blue=0
             green=0
             red=255
             uv=0
             white=0
+        }
+        white {
+            amber=255
+            blue=255
+            green=255
+            red=255
+            uv=255
+            white=255
         }
     }
 }
