--- a/src/main/resources/config/led-bar/colors.conf
+++ b/src/main/resources/config/led-bar/colors.conf
@@ -1,18 +1,23 @@
 colors {
     colors {
-        Blue {
+        blue {
             blue=255
             green=0
             red=0
         }
-        Green {
+        green {
             blue=0
             green=255
             red=0
         }
-        Red {
+        red {
             blue=0
             green=0
+            red=255
+        }
+        white {
+            blue=255
+            green=255
             red=255
         }
     }
