--- a/src/main/resources/config/tsss-par/colors.conf
+++ b/src/main/resources/config/tsss-par/colors.conf
@@ -1,22 +1,28 @@
 colors {
     colors {
-        Blue {
+        blue {
             blue=255
             green=0
             red=0
             white=0
         }
-        Green {
+        green {
             blue=0
             green=255
             red=0
             white=0
         }
-        Red {
+        red {
             blue=0
             green=0
             red=255
             white=0
+        }
+        white {
+            blue=255
+            green=255
+            red=255
+            white=255
         }
     }
 }
