--- a/src/main/resources/config/hex-par/color-categories.conf
+++ b/src/main/resources/config/hex-par/color-categories.conf
@@ -1,10 +1,24 @@
 color-categories {
     cold=[
         blue,
-        white
+        white,
+        bright-blue,
+        cold-blue
     ]
+    strobe=white
     warm=[
         red,
-        green
+        green,
+        cold-blue,
+        blue,
+        amber,
+        light-green,
+        light-pink,
+        lime,
+        pink,
+        purple,
+        strong-orange,
+        uv,
+        yellow
     ]
 }
