--- a/src/main/resources/config/led-bar/color-categories.conf
+++ b/src/main/resources/config/led-bar/color-categories.conf
@@ -3,8 +3,13 @@ color-categories {
         blue,
         white
     ]
+    strobe=white
     warm=[
         red,
-        green
+        green,
+        blue,
+        lime,
+        purple,
+        yellow
     ]
 }
