--- a/src/main/resources/config/led-bar/colors.conf
+++ b/src/main/resources/config/led-bar/colors.conf
@@ -10,6 +10,16 @@ colors {
             green=255
             red=0
         }
+        lime {
+            blue=255
+            green=255
+            red=0
+        }
+        purple {
+            blue=255
+            green=0
+            red=255
+        }
         red {
             blue=0
             green=0
@@ -19,6 +29,11 @@ colors {
             blue=255
             green=255
             red=255
+        }
+        yellow {
+            blue=255
+            green=255
+            red=0
         }
     }
 }
