Fixed a bug in ColorChangerFlow which made devices with "none" color flash on activation, made blackout flow really stick and block other flows, updated color-sets and README.md

--- a/src/main/resources/config/adj-scanner/color-sets.conf
+++ b/src/main/resources/config/adj-scanner/color-sets.conf
@@ -13,22 +13,32 @@ color-sets {
         uv
     ]
     set-3=[
-        none
+        red
     ]
     set-4=[
-        none
+        green
     ]
     set-5=[
-        none
+        red,
+        magenta,
+        yellow,
+        green,
+        uv,
+        light-blue-magenta
     ]
     set-6=[
-        none
+        yellow,
+        orange,
+        pink,
+        blue,
+        light-blue,
+        orange-red
     ]
     set-7=[
-        none
+        uv
     ]
     set-8=[
-        none
+        blue
     ]
     strobe=white
 }
