--- a/src/main/resources/config/hex-clone/color-sets.conf
+++ b/src/main/resources/config/hex-clone/color-sets.conf
@@ -1,11 +1,8 @@
 color-sets {
     set-1=[
         red,
-        green,
         amber,
-        light-green,
         light-pink,
-        lime,
         pink,
         purple,
         strong-orange,
@@ -18,22 +15,33 @@ color-sets {
         uv
     ]
     set-3=[
-        none
+        red
     ]
     set-4=[
-        none
+        green
     ]
     set-5=[
-        none
+        red,
+        green,
+        amber,
+        light-green,
+        light-pink,
+        lime,
+        pink,
+        purple
     ]
     set-6=[
-        none
+        strong-orange,
+        light-pink,
+        lime,
+        pink,
+        purple
     ]
     set-7=[
-        none
+        uv
     ]
     set-8=[
-        none
+        blue
     ]
     strobe=white
 }
