--- a/src/main/resources/config/tsss-par/color-sets.conf
+++ b/src/main/resources/config/tsss-par/color-sets.conf
@@ -4,13 +4,14 @@ color-sets {
         green
     ]
     set-2=[
-        blue
+        blue,
+        green
     ]
     set-3=[
-        none
+        red
     ]
     set-4=[
-        none
+        green
     ]
     set-5=[
         none
@@ -22,7 +23,7 @@ color-sets {
         none
     ]
     set-8=[
-        none
+        blue
     ]
     strobe=white
 }
