--- a/src/main/resources/config/led-bar/color-sets.conf
+++ b/src/main/resources/config/led-bar/color-sets.conf
@@ -1,31 +1,39 @@
 color-sets {
     set-1=[
         red,
-        lime,
         purple,
         yellow
     ]
     set-2=[
         blue,
-        white
+        lime,
+        purple,
+        green
     ]
     set-3=[
-        none
+        red
     ]
     set-4=[
-        none
+        green
     ]
     set-5=[
-        none
+        red,
+        purple,
+        yellow,
+        green
     ]
     set-6=[
-        none
+        blue,
+        lime,
+        red,
+        purple,
+        green
     ]
     set-7=[
         none
     ]
     set-8=[
-        none
+        blue
     ]
     strobe=white
 }
