Added more color-sets for pads

--- a/src/main/resources/config/adj-scanner/color-sets.conf
+++ b/src/main/resources/config/adj-scanner/color-sets.conf
@@ -6,6 +6,19 @@ color-sets {
         orange,
         pink
     ]
+    set-10=[
+        none
+    ]
+    set-11=[
+        red,
+        blue,
+        light-blue,
+        green,
+        yellow
+    ]
+    set-12=[
+        none
+    ]
     set-2=[
         blue,
         light-blue,
@@ -39,6 +52,12 @@ color-sets {
     ]
     set-8=[
         blue
+    ]
+    set-9=[
+        red,
+        yellow,
+        magenta,
+        none
     ]
     strobe=white
 }
