--- a/src/main/resources/config/hex-clone/color-sets.conf
+++ b/src/main/resources/config/hex-clone/color-sets.conf
@@ -8,6 +8,15 @@ color-sets {
         strong-orange,
         yellow
     ]
+    set-10=[
+        none
+    ]
+    set-11=[
+        none
+    ]
+    set-12=[
+        none
+    ]
     set-2=[
         blue,
         bright-blue,
@@ -42,6 +51,13 @@ color-sets {
     ]
     set-8=[
         blue
+    ]
+    set-9=[
+        purple,
+        strong-orange,
+        yellow,
+        red,
+        none
     ]
     strobe=white
 }
