--- a/src/main/resources/config/led-bar/color-sets.conf
+++ b/src/main/resources/config/led-bar/color-sets.conf
@@ -4,6 +4,15 @@ color-sets {
         purple,
         yellow
     ]
+    set-10=[
+        none
+    ]
+    set-11=[
+        none
+    ]
+    set-12=[
+        none
+    ]
     set-2=[
         blue,
         lime,
@@ -34,6 +43,11 @@ color-sets {
     ]
     set-8=[
         blue
+    ]
+    set-9=[
+        red,
+        purple,
+        none
     ]
     strobe=white
 }
