--- a/src/main/resources/config/quad-phase/color-sets.conf
+++ b/src/main/resources/config/quad-phase/color-sets.conf
@@ -5,6 +5,20 @@ color-sets {
         rb,
         rw
     ]
+    set-10=[
+        r,
+        rg,
+        rb,
+        b,
+        bw,
+        rw
+    ]
+    set-11=[
+        none
+    ]
+    set-12=[
+        none
+    ]
     set-2=[
         b,
         g,
@@ -36,6 +50,12 @@ color-sets {
     ]
     set-8=[
         b
+    ]
+    set-9=[
+        r,
+        rb,
+        rg,
+        none
     ]
     strobe=rgbw
 }
