--- a/src/main/resources/config/tsss-par/color-sets.conf
+++ b/src/main/resources/config/tsss-par/color-sets.conf
@@ -3,6 +3,15 @@ color-sets {
         red,
         green
     ]
+    set-10=[
+        none
+    ]
+    set-11=[
+        none
+    ]
+    set-12=[
+        none
+    ]
     set-2=[
         blue,
         green
@@ -24,6 +33,9 @@ color-sets {
     ]
     set-8=[
         blue
+    ]
+    set-9=[
+        none
     ]
     strobe=white
 }
