--- a/src/main/resources/config/hex-par/color-sets.conf
+++ b/src/main/resources/config/hex-par/color-sets.conf
@@ -21,7 +21,8 @@ color-sets {
         blue,
         bright-blue,
         cold-blue,
-        uv
+        uv,
+        green
     ]
     set-3=[
         red
