--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "org.jetbrains.kotlin.jvm" version "1.3.50"
+    id "org.openjfx.javafxplugin" version "0.0.8"
     id "com.github.johnrengelman.shadow" version "2.0.4"
 }
 
@@ -11,6 +12,9 @@ sourceCompatibility = 1.8
 
 repositories {
     jcenter()
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
 }
 
 configurations {
@@ -20,6 +24,7 @@ configurations {
 
 dependencies {
     shadow "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    shadow "no.tornado:tornadofx:2.0.0-SNAPSHOT"
     shadow "com.illposed.osc:javaosc-core:0.6"
     shadow "org.redundent:kotlin-xml-builder:1.5.1"
     shadow "io.github.config4k:config4k:0.4.1"
@@ -35,6 +40,11 @@ shadowJar {
     classifier = null // Remove "-all" suffix from output file name
 }
 build.dependsOn shadowJar
+
+javafx {
+    version = "13"
+    modules = [ "javafx.controls" ]
+}
 
 compileKotlin.kotlinOptions {
     jvmTarget = "1.8"
