Replaced color 'none' with 'off', updated configs

--- a/src/main/resources/config/general.conf
+++ b/src/main/resources/config/general.conf
@@ -1,7 +1,8 @@
 general {
-    animation-tick-frequency=30
+    beats-per-minute=120
     bpm-fader-max=240
     bpm-fader-min=70
+    ticks-per-second=30
     transition-ticks-fader-max=90
     transition-ticks-fader-min=1
 }
