--- a/src/main/resources/config/hex-clone/color-sets.conf
+++ b/src/main/resources/config/hex-clone/color-sets.conf
@@ -9,13 +9,13 @@ color-sets {
         yellow
     ]
     set-10=[
-        none
+        off
     ]
     set-11=[
-        none
+        off
     ]
     set-12=[
-        none
+        off
     ]
     set-2=[
         blue,
@@ -58,7 +58,7 @@ color-sets {
         strong-orange,
         yellow,
         red,
-        none
+        off
     ]
     strobe=white
 }
