--- a/src/main/resources/config/hex-clone/colors.conf
+++ b/src/main/resources/config/hex-clone/colors.conf
@@ -64,6 +64,14 @@ colors {
             uv=0
             white=0
         }
+        off {
+            amber=0
+            blue=0
+            green=0
+            red=0
+            uv=0
+            white=0
+        }
         pink {
             amber=255
             blue=0
