--- a/src/main/resources/config/led-bar/color-sets.conf
+++ b/src/main/resources/config/led-bar/color-sets.conf
@@ -5,13 +5,13 @@ color-sets {
         yellow
     ]
     set-10=[
-        none
+        off
     ]
     set-11=[
-        none
+        off
     ]
     set-12=[
-        none
+        off
     ]
     set-2=[
         blue,
@@ -39,7 +39,7 @@ color-sets {
         green
     ]
     set-7=[
-        none
+        off
     ]
     set-8=[
         blue
@@ -47,7 +47,7 @@ color-sets {
     set-9=[
         red,
         purple,
-        none
+        off
     ]
     strobe=white
 }
