--- a/src/main/resources/config/led-bar/colors.conf
+++ b/src/main/resources/config/led-bar/colors.conf
@@ -15,6 +15,11 @@ colors {
             green=255
             red=0
         }
+        off {
+            blue=0
+            green=0
+            red=0
+        }
         purple {
             blue=255
             green=0
