--- a/src/main/resources/config/tsss-par/color-sets.conf
+++ b/src/main/resources/config/tsss-par/color-sets.conf
@@ -4,13 +4,13 @@ color-sets {
         green
     ]
     set-10=[
-        none
+        off
     ]
     set-11=[
-        none
+        off
     ]
     set-12=[
-        none
+        off
     ]
     set-2=[
         blue,
@@ -23,19 +23,19 @@ color-sets {
         green
     ]
     set-5=[
-        none
+        off
     ]
     set-6=[
-        none
+        off
     ]
     set-7=[
-        none
+        off
     ]
     set-8=[
         blue
     ]
     set-9=[
-        none
+        off
     ]
     strobe=white
 }
