--- a/src/main/resources/config/tsss-par/colors.conf
+++ b/src/main/resources/config/tsss-par/colors.conf
@@ -12,6 +12,12 @@ colors {
             red=0
             white=0
         }
+        off {
+            blue=0
+            green=0
+            red=0
+            white=0
+        }
         red {
             blue=0
             green=0
