--- a/src/main/resources/config/adj-scanner/color-sets.conf
+++ b/src/main/resources/config/adj-scanner/color-sets.conf
@@ -7,7 +7,7 @@ color-sets {
         pink
     ]
     set-10=[
-        none
+        off
     ]
     set-11=[
         red,
@@ -17,7 +17,7 @@ color-sets {
         yellow
     ]
     set-12=[
-        none
+        off
     ]
     set-2=[
         blue,
@@ -57,7 +57,7 @@ color-sets {
         red,
         yellow,
         magenta,
-        none
+        off
     ]
     strobe=white
 }
