--- a/src/main/resources/config/quad-phase/color-sets.conf
+++ b/src/main/resources/config/quad-phase/color-sets.conf
@@ -14,10 +14,10 @@ color-sets {
         rw
     ]
     set-11=[
-        none
+        off
     ]
     set-12=[
-        none
+        off
     ]
     set-2=[
         b,
@@ -46,7 +46,7 @@ color-sets {
         b
     ]
     set-7=[
-        none
+        off
     ]
     set-8=[
         b
@@ -55,7 +55,7 @@ color-sets {
         r,
         rb,
         rg,
-        none
+        off
     ]
     strobe=rgbw
 }
