Added "zero BPM" with StoppableTickable, fixed FixedColorFeatures in ColorChangerFlow

--- a/src/main/resources/config/general.conf
+++ b/src/main/resources/config/general.conf
@@ -1,8 +1,10 @@
 general {
+    akai-send-display-info=true
     beats-per-minute=120
-    bpm-fader-max=240
-    bpm-fader-min=70
+    bpm-fader-max=350
+    bpm-fader-min=40
     ticks-per-second=30
-    transition-ticks-fader-max=90
+    transition-ticks-fader-max=60
     transition-ticks-fader-min=1
+    ultra-slow-bpm=20
 }
