Changed color sets, added very fast BPM button, more lights for OneLightOnly ;), all dimmable lights for SawToothIntensity

--- a/src/main/resources/config/adj-scanner/color-sets.conf
+++ b/src/main/resources/config/adj-scanner/color-sets.conf
@@ -7,14 +7,13 @@ color-sets {
         pink
     ]
     set-10=[
-        off
-    ]
-    set-11=[
-        red,
-        blue,
-        light-blue,
+        orange,
         green,
         yellow
+    ]
+    set-11=[
+        pink,
+        magenta
     ]
     set-12=[
         off
@@ -40,11 +39,8 @@ color-sets {
         light-blue-magenta
     ]
     set-6=[
-        yellow,
-        orange,
-        pink,
-        blue,
-        light-blue,
+        red,
+        white,
         orange-red
     ]
     set-7=[
@@ -54,10 +50,8 @@ color-sets {
         blue
     ]
     set-9=[
-        red,
         yellow,
-        magenta,
-        off
+        magenta
     ]
     strobe=white
 }
