--- a/src/main/resources/config/hex-clone/color-sets.conf
+++ b/src/main/resources/config/hex-clone/color-sets.conf
@@ -9,10 +9,13 @@ color-sets {
         yellow
     ]
     set-10=[
-        off
+        green,
+        strong-orange,
+        light-green
     ]
     set-11=[
-        off
+        light-pink,
+        purple
     ]
     set-12=[
         off
@@ -41,11 +44,8 @@ color-sets {
         purple
     ]
     set-6=[
-        strong-orange,
-        light-pink,
-        lime,
-        pink,
-        purple
+        red,
+        white
     ]
     set-7=[
         uv
@@ -55,10 +55,7 @@ color-sets {
     ]
     set-9=[
         purple,
-        strong-orange,
-        yellow,
-        red,
-        off
+        strong-orange
     ]
     strobe=white
 }
