--- a/src/main/resources/config/hex-par/color-sets.conf
+++ b/src/main/resources/config/hex-par/color-sets.conf
@@ -9,10 +9,14 @@ color-sets {
         yellow
     ]
     set-10=[
-        off
+        strong-orange,
+        green,
+        strong-orange,
+        light-green
     ]
     set-11=[
-        off
+        purple,
+        light-pink
     ]
     set-12=[
         off
@@ -38,14 +42,8 @@ color-sets {
         purple
     ]
     set-6=[
-        red,
-        green,
-        amber,
-        light-green,
-        light-pink,
-        lime,
-        pink,
-        purple
+        white,
+        red
     ]
     set-7=[
         uv
@@ -54,11 +52,8 @@ color-sets {
         blue
     ]
     set-9=[
-        purple,
         strong-orange,
-        yellow,
-        red,
-        off
+        purple
     ]
     strobe=white
 }
