--- a/src/main/resources/config/led-bar/color-sets.conf
+++ b/src/main/resources/config/led-bar/color-sets.conf
@@ -5,10 +5,15 @@ color-sets {
         yellow
     ]
     set-10=[
-        off
+        yellow,
+        green,
+        lime,
+        red
     ]
     set-11=[
-        off
+        red,
+        purple,
+        white
     ]
     set-12=[
         off
@@ -32,11 +37,8 @@ color-sets {
         green
     ]
     set-6=[
-        blue,
-        lime,
         red,
-        purple,
-        green
+        white
     ]
     set-7=[
         off
@@ -47,7 +49,7 @@ color-sets {
     set-9=[
         red,
         purple,
-        off
+        yellow
     ]
     strobe=white
 }
