--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id "java"
-    id "org.jetbrains.kotlin.jvm" version "1.3.50"
+    id "org.jetbrains.kotlin.jvm" version "1.3.61"
     id "org.openjfx.javafxplugin" version "0.0.8"
-    id "com.github.johnrengelman.shadow" version "2.0.4"
 }
 
 group "de.randombyte"
@@ -17,29 +16,25 @@ repositories {
     }
 }
 
-configurations {
-    compile.extendsFrom shadow
-    compile.extendsFrom kapt
-}
-
 dependencies {
-    shadow "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    shadow "no.tornado:tornadofx:2.0.0-SNAPSHOT"
-    shadow "com.illposed.osc:javaosc-core:0.6"
-    shadow "org.redundent:kotlin-xml-builder:1.5.1"
-    shadow "io.github.config4k:config4k:0.4.1"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "no.tornado:tornadofx:1.7.20"
+    compile "com.illposed.osc:javaosc-core:0.7"
+    compile "org.redundent:kotlin-xml-builder:1.6.0"
+    compile "io.github.config4k:config4k:0.4.2"
 }
 
-shadowJar {
+// Shadowing with the jrengelman shadow plugin didn't work for JavaFX/OpenJFX, it wasn't included in the final fat jar
+// Though simply copying everything from the runtime classpath to the jar without doing anything fancy (relocating) works
+// JavaFX has to be bundled in the jar because often times since Java 11 JavaFX isn't shipped with it anymore
+jar {
     manifest {
         attributes "Main-Class": "de.randombyte.lighthub.LightHubKt"
     }
-    
-    configurations = [project.configurations.shadow]
-
-    classifier = null // Remove "-all" suffix from output file name
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
-build.dependsOn shadowJar
 
 javafx {
     version = "13"
